--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,6 @@
 [tool.poetry]
-name = "apix"
+name = "apiX"
 dynamic = ["version"]
-version = "0.0.1"
 description = "apiX - A framework to create MongoDB-backed applications with a GraphQL API web interface."
 authors = ["Danijel Kivaranovic <dan@apix.org>"]
 license = "MIT"
