--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "apiX"
-dynamic = ["version"]
+version = "0.0.3"
 description = "apiX - A framework to create MongoDB-backed applications with a GraphQL API web interface."
 authors = ["Danijel Kivaranovic <dan@apix.org>"]
 license = "MIT"
@@ -16,6 +16,7 @@ starlette = "^0.26.1"
 pymongo = "^4.3.3"
 motor = "^3.1.1"
 graphql-core = "^3.2.3"
+uvicorn = {version = "^0.23.0", optional = true}
 
 
 [build-system]
