--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "apiX"
 version = "0.0.4"
-description = "apiX - A framework to create MongoDB-backed applications with a GraphQL API web interface."
+description = "apiX - The Python framework to create MongoDB-backed applications with GraphQL API web interface."
 authors = ["Danijel Kivaranovic <dan@apix.org>"]
 license = "MIT"
 readme = "README.md"
@@ -18,6 +18,9 @@ motor = "^3.1.1"
 graphql-core = "^3.2.3"
 uvicorn = {version = "^0.23.0", optional = true}
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core"]
