change PyPI directory from apix to apix-core

--- a/.github/workflows/publish-dev-to-test-pypi.yml
+++ b/.github/workflows/publish-dev-to-test-pypi.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: TestPyPI
-      url: https://test.pypi.org/project/apix
+      url: https://test.pypi.org/project/apix-core
     permissions:
       id-token: write
 
