--- a/.github/workflows/publish-main-to-pypi.yml
+++ b/.github/workflows/publish-main-to-pypi.yml
@@ -21,17 +21,15 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.x"
+        python-version: "3.11"
 
-    - name: Install dependencies
+    - name: Install Poetry and build package
       run: |
-        python -m pip install --upgrade pip
-        pip install build
-
-    - name: Build package
-      run: python -m build
+        pip install poetry
+        poetry build
 
     - name: Publish distribution to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
+        user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
