--- a/.github/workflows/publish-dev-to-test-pypi.yml
+++ b/.github/workflows/publish-dev-to-test-pypi.yml
@@ -23,15 +23,11 @@ jobs:
       with:
         python-version: "3.11"
 
-    - name: Install Poetry and build package
+    - name: Install Poetry, build package, publish to Test PyPI
+      env:
+        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.TEST_PYPI_API_TOKEN }}
       run: |
         pip install poetry
-        poetry build
-
-    - name: Publish distribution to Test PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository-url: https://test.pypi.org/legacy/
-        skip-existing: true
+        poetry config repositories.testpypi https://test.pypi.org/legacy/
+        poetry build  --only-root
+        poetry publish --repository testpypi --username __token__ --skip-existing
