--- a/.github/workflows/publish-main-to-pypi.yml
+++ b/.github/workflows/publish-main-to-pypi.yml
@@ -23,13 +23,10 @@ jobs:
       with:
         python-version: "3.11"
 
-    - name: Install Poetry and build package
+    - name: Install Poetry, build package, publish to Test PyPI
+      env:
+        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.TEST_PYPI_API_TOKEN }}
       run: |
         pip install poetry
-        poetry build
-
-    - name: Publish distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        poetry build  --only-root
+        poetry publish --username __token__
