--- a/.github/workflows/publish-dev-to-test-pypi.yml
+++ b/.github/workflows/publish-dev-to-test-pypi.yml
@@ -25,9 +25,10 @@ jobs:
 
     - name: Install Poetry, build package, publish to Test PyPI
       env:
-        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        POETRY_PYPI_TOKEN_PYPI:
       run: |
         pip install poetry
         poetry config repositories.testpypi https://test.pypi.org/legacy/
+        poetry config pypi-token.testpypi ${{ secrets.TEST_PYPI_API_TOKEN }}
         poetry build
-        poetry publish --repository testpypi --username __token__ --skip-existing
+        poetry publish --repository testpypi --skip-existing
